# sphinx-gitref

./: .gitignore  .pre-commit-hooks.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  pypi.yml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  install.rst  requirements.txt  usage.rst
example/docs/source/: conf.py  gitref.json  index.rst  reader.rst
example/myproject/: reader.py
sphinx_gitref/: __init__.py  builders.py  commands.py  constants.py  git.py  hasher.py  parser.py  remote.py  role.py  setup.py
tests/: common.py  test_commands.py  test_git.py  test_parser.py  test_remote.py  test_role.py
