[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-gitref"
description = "Link to source code and validate references in documentation"
dynamic = ["version"]
authors = [
    { name="Richard Terry", email="code@radiac.net" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["django"]
requires-python = ">=3.7"
dependencies = [
    "docutils",
    "sphinx",
]

[project.urls]
Homepage = "https://radiac.net/projects/sphinx-gitref/"
Documentation = "https://github.com/radiac/sphinx-gitref"
Changelog = "https://github.com/radiac/sphinx-gitref"
Repository = "https://github.com/radiac/sphinx-gitref"
Issues = "https://github.com/radiac/sphinx-gitref/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sphinx_gitref*"]
exclude = ["docs*", "tests*", "examples*", "src*", "dist*"]

[tool.setuptools.dynamic]
version = {attr = "sphinx_gitref.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=sphinx_gitref --cov-report=term --cov-report=html"
testpaths = [
    "tests",
    "sphinx_gitref",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["sphinx_gitref"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"

[tool.isort]
multi_line_output = 3
line_length = 88
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
lines_after_imports = 2
skip = [".git"]

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true

[tool.doc8]
max-line-length = 88
ignore-path = ["*.txt"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F"]
lint.ignore = [
    "E501",  # line length
]
exclude = [
    ".git",
    "dist",
]
