[metadata]
name = sphinx-gitref
version = attr: sphinx_gitref.__version__
description = Link to source code and validate references in documentation
long_description = file: README.rst
keywords = sphinx, documentation, git, source
author = Wildfish
author_email = developers@wildfish.com
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = https://github.com/wildfish/sphinx-gitref

[options]
python_requires = >=3.6
packages = find:
install_requires =
    docutils
    sphinx
include_package_data = true
zip_safe = false

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = --black --isort --flake8 --cov=sphinx_gitref --cov-report=term --cov-report=html

[flake8]
max-line-length = 88
exclude = .tox,.git

[isort]
multi_line_output = 3
line_length = 88
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .tox,.git

[mypy]
ignore_missing_imports = True

[doc8]
max-line-length = 88
ignore-path = *.txt,.tox
